--- a/dingtalk-robot-springboot-listener/pom.xml
+++ b/dingtalk-robot-springboot-listener/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.vbobot.common</groupId>
         <artifactId>common</artifactId>
-        <version>1.6.0</version>
+        <version>2.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -46,4 +46,13 @@
             <artifactId>guava</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-toolchains-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
