--- a/invoke-cost-time/pom.xml
+++ b/invoke-cost-time/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>common</artifactId>
     <groupId>com.vbobot.common</groupId>
-    <version>1.6.0</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -47,4 +47,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-toolchains-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 </project>
