--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.vbobot.common</groupId>
   <artifactId>common</artifactId>
-  <version>1.6.0</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>com.vbobot.parent</groupId>
     <artifactId>vbobot-pom-parent</artifactId>
-    <version>1.1.0</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <modules>
@@ -21,48 +21,4 @@
     <module>invoke-cost-time</module>
   </modules>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-commons</artifactId>
-        <version>1.12.6.RELEASE</version>
-        <scope>provided</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-
-  <repositories>
-    <repository>
-      <releases>
-        <enabled>true</enabled>
-      </releases>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>rdc-releases</id>
-      <url>https://packages.aliyun.com/maven/repository/2252741-release-F3eJT8/</url>
-    </repository>
-    <repository>
-      <releases>
-        <enabled>false</enabled>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>rdc-snapshots</id>
-      <url>https://packages.aliyun.com/maven/repository/2252741-snapshot-2p7rGU/</url>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <repository>
-      <id>rdc-releases</id>
-      <url>https://packages.aliyun.com/maven/repository/2252741-release-F3eJT8/</url>
-    </repository>
-    <snapshotRepository>
-      <id>rdc-snapshots</id>
-      <url>https://packages.aliyun.com/maven/repository/2252741-snapshot-2p7rGU/</url>
-    </snapshotRepository>
-  </distributionManagement>
 </project>
